[package]
name = "rhine"
version = "0.1.0"
authors = ["Anton Romanov <antonromanov16@yandex.ru>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
yaml-rust = "0.4"

[build-dependencies]
yaml-rust = "0.4"
